--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Agrupa los ejercicios vistos en el curso en una pagina web utilizando Tailwind para la interfaz",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV=production npx tailwindcss -i ./src/tailwind.css -o ./public/css/styles.css",
+    "build": "NODE_ENV=production npx tailwindcss -i ./src/tailwind.css -o ./public/css/tailwind.css",
     "tailwind": "npx tailwindcss -i ./src/tailwind.css -o ./public/css/tailwind.css",
     "watch": "npx tailwindcss -i ./src/tailwind.css  -o ./public/css/tailwind.css --watch"
   },
