--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   },
   "homepage": "https://github.com/AllanDev15/CursoPracticoJavascript-Platzi#readme",
   "devDependencies": {
-    "autoprefixer": "^10.3.2",
-    "postcss": "^8.3.6",
-    "tailwindcss": "^2.2.7",
     "win-node-env": "^0.4.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "autoprefixer": "^10.3.2",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.7"
+  }
 }
